<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/drawer_back"
    android:id="@+id/layout_drawer"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="煤矿瓦斯抽采数据快速记录"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_alignRight="@id/tv_title"
            android:layout_marginTop="16dp"
            android:gravity="right"
            android:text="V1.0"
            android:textColor="@color/grey_white"
            android:textSize="12sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_drawer_place"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="22sp"
            android:background="@drawable/button_drawer_border"
            android:textColor="@drawable/button_login_onclick"
            android:text="@string/place"/>
        <Button
            android:id="@+id/btn_drawer_history"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="22sp"
            android:background="@drawable/button_drawer_border"
            android:textColor="@drawable/button_login_onclick"
            android:text="@string/history"/>
        <Button
            android:id="@+id/btn_drawer_exit"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="22sp"
            android:background="@drawable/button_drawer_border"
            android:textColor="@drawable/button_login_onclick"
            android:text="@string/exit"/>
    </LinearLayout>
    <TextView
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="河南理工大学智能开采研究院"
        android:textColor="@color/grey_white"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"/>
</LinearLayout>
