<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bcak"
    tools:context=".activity.activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx_login_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="right"
                android:textColor="@color/grey_white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="煤矿瓦斯抽采数据快速记录"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_alignRight="@id/tv_title"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:text="V1.0"
                android:textColor="@color/grey_white"
                android:textSize="16sp" />
        </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="@string/administrator"
            android:gravity="left|top"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey_white"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/layout_setting_name"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:text="@string/admini_name"
                android:gravity="left|bottom"
                android:layout_marginBottom="3dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText

                android:id="@+id/ed_ad_name"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:theme="@style/MyEditText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:text="@string/admini_pwd"
                android:gravity="left|bottom"
                android:layout_marginBottom="3dp"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ed_ad_pwd"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:textSize="22sp"
                android:theme="@style/MyEditText" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_setting_sub"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_login_border"
            android:text="@string/sure"
            android:textColor="@drawable/button_login_onclick"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_setting_back"
            android:layout_width="260dp"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_login_border"
            android:text="@string/back"
            android:textColor="@drawable/button_login_onclick"
            android:textSize="24sp" />
    </LinearLayout>

        <TextView
            android:id="@+id/tv_show"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.4"
            android:gravity="bottom|center_horizontal"
            android:text="河南理工大学智能开采研究院"
            android:textColor="@color/grey_white" />

    </LinearLayout>
</LinearLayout>