<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bcak"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:background="@color/bar"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="序号"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="巷道号"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="组数"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="钻孔数"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="操作"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_place"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.8"
            android:gravity="center">

            <Button
                android:id="@+id/btn_addtunnel"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:background="@drawable/button_login_border"
                android:gravity="center"
                android:text="@string/newtunnel"
                android:textColor="@drawable/button_login_onclick"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>




    //删除巷道
    <LinearLayout
        android:id="@+id/layout_delect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:visibility="invisible"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/delect_sure"
                android:textColor="@color/yello"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal">
                <Button
                    android:id="@+id/btn_alert_sure"
                    android:layout_width="260dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_login_border"
                    android:gravity="center"
                    android:text="@string/sure"
                    android:textColor="@drawable/button_login_onclick"
                    android:textSize="24sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_alert_cancle"
                    android:layout_width="260dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_login_border"
                    android:gravity="center"
                    android:text="@string/cancle"
                    android:textColor="@drawable/button_login_onclick"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>