<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:background="@color/bcak"
    android:fadeScrollbars="true"
    android:fillViewport="true"
    tools:context=".activity.activity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tx_login_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="right"
                android:text="@string/login_set"
                android:textColor="@color/grey_white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="钻孔瓦斯抽采数据快速记录"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_alignRight="@id/tv_title"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:text="V1.0"
                android:textColor="@color/grey_white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="260dp"
                android:layout_height="45dp"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:text="@string/measure_personname"
                android:textColor="@color/grey_white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ed_login_name"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:layout_below="@+id/name"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:theme="@style/MyEditText" />
            <TextView
                android:id="@+id/btn_setting_sub"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:layout_above="@id/btn_login_sub"
                android:layout_alignLeft="@id/btn_login_sub"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="70dp"
                android:background="@color/bcak"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_login_sub"
                android:layout_width="260dp"
                android:layout_height="55dp"
                android:layout_above="@id/tv_show"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_login_border"
                android:text="@string/sure"
                android:textColor="@drawable/button_login_onclick"
                android:textSize="24sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_show"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.3"
            android:gravity="bottom|center_horizontal"
            android:text="河南理工大学智能开采研究院"
            android:textColor="@color/grey_white" />
    </LinearLayout>
</ScrollView>