<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.ChangeTunnelActivity">
    <LinearLayout
        android:id="@+id/layout_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tran_back"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:background="@color/bar"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="巷道名称:"
                        android:gravity="right|center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/white"
                        android:layout_marginRight="20dp"
                        android:textSize="18sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="巷道号:"
                        android:gravity="right|center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/tv_tunnel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:textColor="@color/yello"
                        android:textSize="22sp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/red"
                        android:textSize="14sp"
                        android:theme="@style/MyEditText"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="巷道内组数:"
                        android:gravity="right|center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                    <EditText
                        android:id="@+id/ed_groups"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.8"
                        android:maxLength="3"
                        android:gravity="center"
                        android:inputType="number"
                        android:layout_gravity="center"
                        android:theme="@style/MyEditText"
                        android:textColor="@color/white"
                        android:textSize="22sp"/>
                    <TextView
                        android:id="@+id/tv_groups"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/red"
                        android:textSize="14sp"
                        android:theme="@style/MyEditText"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="组内钻孔数:"
                        android:gravity="right|center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                    <EditText
                        android:id="@+id/ed_holes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:maxLength="3"
                        android:inputType="number"
                        android:layout_gravity="center"
                        android:theme="@style/MyEditText"
                        android:textColor="@color/white"
                        android:textSize="22sp"/>
                    <TextView
                        android:id="@+id/tv_holes"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/red"
                        android:textSize="14sp"
                        android:theme="@style/MyEditText"
                        android:gravity="center" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal">
                <Button
                    android:id="@+id/btn_sure"
                    android:layout_width="260dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_login_border"
                    android:gravity="center"
                    android:text="@string/sure"
                    android:textColor="@drawable/button_login_onclick"
                    android:textSize="24sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_cancle"
                    android:layout_width="260dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_login_border"
                    android:gravity="center"
                    android:text="@string/cancle"
                    android:textColor="@drawable/button_login_onclick"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>